--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js -e js,hbs"
+    "start": "node server/index.js",
+    "build": "cd client && npm install && npm run build",
+    "dev": "nodemon server/index.js -e js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "hbs": "^4.0.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
     "nodemon": "^1.2.0"
+  },
+  "engines": {
+    "node": "18.10.0"
   }
 }
